--- a/pages/17973.html
+++ b/pages/17973.html
@@ -292,7 +292,7 @@ margin-left: 0em;
     <span class="skipNav"><a href='#navEnd'>Skip the Navigation Links</a> | </span>
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/8357/#Item_2" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/8357/#Item_3" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -859,7 +859,7 @@ margin-left: 0em;
 </div>
 
 <h1 id='contents_2'>Contents</h1>
-<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#bottomup_and_topdown_approaches'>Bottom-up and Top-down approaches</a></li><li><a href='#properties'>Properties</a><ul><li><a href='#ChiralFermions'>Chiral fermions</a></li><li><a href='#GenerationsOfFermions'>Generations of fermions</a></li><li><a href='#higgs_mechanism'>Higgs mechanism</a></li><li><a href='#intersections_of_d6s_with_d8o8s'>Intersections of D6s with D8/O8s</a></li></ul></li><li><a href='#references'>References</a></li></ul></div>
+<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#bottomup_and_topdown_approaches'>Bottom-up and Top-down approaches</a></li><li><a href='#properties'>Properties</a><ul><li><a href='#ChiralFermions'>Chiral fermions</a></li><li><a href='#GenerationsOfFermions'>Generations of fermions</a></li><li><a href='#higgs_mechanism'>Higgs mechanism</a></li><li><a href='#IntersectionOfD6WithO8'>Intersections of D6s with D8/O8s</a></li></ul></li><li><a href='#references'>References</a></li></ul></div>
 <h2 id='idea'>Idea</h2>
 
 <p>In <a class='existingWikiWord' href='/nlab/show/string+phenomenology'>string phenomenology</a> for <a class='existingWikiWord' href='/nlab/show/type+II+string+theory'>type IIA string theory</a>, quasi-realistic <a class='existingWikiWord' href='/nlab/show/model+%28in+theoretical+physics%29'>models</a> (i.e. close to the <a class='existingWikiWord' href='/nlab/show/standard+model+of+particle+physics'>standard model of particle physics</a>, or an <a class='existingWikiWord' href='/nlab/show/MSSM'>MSSM</a>) may be obtained by <a class='existingWikiWord' href='/nlab/show/Kaluza-Klein+mechanism'>KK-compactifications</a> from 10d down to 4d. with configurations of <a class='existingWikiWord' href='/nlab/show/D6-brane'>D6-branes</a> which fill all of 4d spacetime and <a class='existingWikiWord' href='/nlab/show/brane+intersection'>intersect</a> in a certain way in the 6-dimensional <a class='existingWikiWord' href='/nlab/show/fiber'>fiber</a> space.</p>
@@ -888,7 +888,7 @@ margin-left: 0em;
 
 <h3 id='ChiralFermions'>Chiral fermions</h3>
 
-<p>The observation that <a class='existingWikiWord' href='/nlab/show/Weyl+spinor'>chiral fermions</a> appear when <a class='existingWikiWord' href='/nlab/show/D6-brane'>D6-branes</a> <a class='existingWikiWord' href='/nlab/show/brane+intersection'>intersect</a> at an angle on an <math class='maruku-mathml' display='inline' id='mathml_3809634840f46af68001865da38fa815a897dc1b_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>ℝ</mi> <mrow><mn>3</mn><mo>,</mo><mn>1</mn></mrow></msup></mrow><annotation encoding='application/x-tex'>\mathbb{R}^{3,1}</annotation></semantics></math> is due to (<a href='#BerkoozDouglasLeigh96'>Berkooz-Douglas-Leigh 96</a>), see also (<a href='#AFIRU00'>AFIRU 00, section 4</a>).</p>
+<p>The observation that <a class='existingWikiWord' href='/nlab/show/Weyl+spinor'>chiral fermions</a> appear when <a class='existingWikiWord' href='/nlab/show/D6-brane'>D6-branes</a> <a class='existingWikiWord' href='/nlab/show/brane+intersection'>intersect</a> at an angle on an <math class='maruku-mathml' display='inline' id='mathml_1348de70a88ec62d7f7fba2928c0f0f34ca7ee44_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>ℝ</mi> <mrow><mn>3</mn><mo>,</mo><mn>1</mn></mrow></msup></mrow><annotation encoding='application/x-tex'>\mathbb{R}^{3,1}</annotation></semantics></math> is due to (<a href='#BerkoozDouglasLeigh96'>Berkooz-Douglas-Leigh 96</a>), see also (<a href='#AFIRU00'>AFIRU 00, section 4</a>).</p>
 
 <p><img src='https://ncatlab.org/nlab/files/D6BranesIntersectingAtAnAngle.png' width='650'/></p>
 
@@ -920,25 +920,27 @@ margin-left: 0em;
 
 <p><img src='https://ncatlab.org/nlab/files/BraneRecombinationII.jpg' width='600'/></p>
 
-<h3 id='intersections_of_d6s_with_d8o8s'>Intersections of D6s with D8/O8s</h3>
+<h3 id='IntersectionOfD6WithO8'>Intersections of D6s with D8/O8s</h3>
 
-<p>A <a class='existingWikiWord' href='/nlab/show/black+brane'>black</a> <a class='existingWikiWord' href='/nlab/show/D6-brane'>D6-brane</a> may end on a <a class='existingWikiWord' href='/nlab/show/black+brane'>black</a> <a class='existingWikiWord' href='/nlab/show/NS5-brane'>NS5-brane</a>, and in fact a priori each <a class='existingWikiWord' href='/nlab/show/black+brane'>brane</a> <a class='existingWikiWord' href='/nlab/show/NS5-brane'>NS5-brane</a> has to be the junction of two <a class='existingWikiWord' href='/nlab/show/black+brane'>brane</a> <a class='existingWikiWord' href='/nlab/show/D6-brane'>D6-branes</a>. For details see at <em><a href='NS5-brane#D6BranesEndingOnNS5Branes'>D6-branes ending on NS5-branes</a></em>.</p>
-
-<p><img src='https://ncatlab.org/nlab/files/HalfNS5.jpg' width='650'/></p>
-
-<blockquote>
-<p>from <a href='#GKSTY02'>GKSTY 02</a></p>
-</blockquote>
-
-<p>If in addition the <a class='existingWikiWord' href='/nlab/show/black+brane'>black</a> <a class='existingWikiWord' href='/nlab/show/NS5-brane'>NS5-brane</a> sits at an <a class='existingWikiWord' href='/nlab/show/orientifold+plane'>O8-plane</a>, hence at the <a class='existingWikiWord' href='/nlab/show/orientifold'>orientifold</a> <a class='existingWikiWord' href='/nlab/show/fixed+point'>fixed point</a>-locus, then in the ordinary <math class='maruku-mathml' display='inline' id='mathml_3809634840f46af68001865da38fa815a897dc1b_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>ℤ</mi><mo stretchy='false'>/</mo><mn>2</mn></mrow><annotation encoding='application/x-tex'>\mathbb{Z}/2</annotation></semantics></math>-<a class='existingWikiWord' href='/nlab/show/quotient+object'>quotient</a> it appears as a <span class='newWikiWord'>half-brane<a href='/nlab/new/half-brane'>?</a></span> with only one copy of <a class='existingWikiWord' href='/nlab/show/D6-brane'>D6-branes</a> ending on it:</p>
-
-<p><span class='newWikiWord'>HalfedNS5.jpg<a href='/nlab/files/HalfedNS5.jpg'>?</a></span></p>
+<p>A <a class='existingWikiWord' href='/nlab/show/black+brane'>black</a> <a class='existingWikiWord' href='/nlab/show/D6-brane'>D6-brane</a> may end on a <a class='existingWikiWord' href='/nlab/show/black+brane'>black</a> <a class='existingWikiWord' href='/nlab/show/NS5-brane'>NS5-brane</a>, and in fact each <a class='existingWikiWord' href='/nlab/show/black+brane'>brane</a> <a class='existingWikiWord' href='/nlab/show/NS5-brane'>NS5-brane</a> at a non-trivial <a class='existingWikiWord' href='/nlab/show/ADE+singularity'>ADE singularity</a> has to be the junction of two <a class='existingWikiWord' href='/nlab/show/black+brane'>black</a> <a class='existingWikiWord' href='/nlab/show/D6-brane'>D6-branes</a>. For details see at <em><a href='NS5-brane#D6BranesEndingOnNS5Branes'>D6-branes ending on NS5-branes</a></em>.</p>
 
 <p><img src='https://ncatlab.org/nlab/files/HalfNS5.jpg' width='650'/></p>
 
 <blockquote>
 <p>from <a href='#GKSTY02'>GKSTY 02</a></p>
 </blockquote>
+
+<p>If in addition the <a class='existingWikiWord' href='/nlab/show/black+brane'>black</a> <a class='existingWikiWord' href='/nlab/show/NS5-brane'>NS5-brane</a> sits at an <a class='existingWikiWord' href='/nlab/show/orientifold+plane'>O8-plane</a>, hence at the <a class='existingWikiWord' href='/nlab/show/orientifold'>orientifold</a> <a class='existingWikiWord' href='/nlab/show/fixed+point'>fixed point</a>-locus, then in the ordinary <math class='maruku-mathml' display='inline' id='mathml_1348de70a88ec62d7f7fba2928c0f0f34ca7ee44_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>ℤ</mi><mo stretchy='false'>/</mo><mn>2</mn></mrow><annotation encoding='application/x-tex'>\mathbb{Z}/2</annotation></semantics></math>-<a class='existingWikiWord' href='/nlab/show/quotient+object'>quotient</a> it appears as a “half-brane” with only one copy of <a class='existingWikiWord' href='/nlab/show/D6-brane'>D6-branes</a> ending on it:</p>
+
+<p><img src='https://ncatlab.org/nlab/files/HalfNS5II.jpg' width='400'/></p>
+
+<blockquote>
+<p>from <a href='#GKSTY02'>GKSTY 02</a></p>
+</blockquote>
+
+<p>(In <a href='#HananyZaffaroni99'>Hanany-Zaffaroni 99</a> this is interpreted in terms of the <a class='existingWikiWord' href='/nlab/show/%27t+Hooft-Polyakov+monopole'>&#39;t Hooft-Polyakov monopole</a>.)</p>
+
+<p>The lift to <a class='existingWikiWord' href='/nlab/show/M-theory'>M-theory</a> of this situation is an <a class='existingWikiWord' href='/nlab/show/M5-brane'>M5-brane</a> intersecting an <a class='existingWikiWord' href='/nlab/show/M9-brane'>M9-brane</a>:</p>
 
 <p><img src='https://ncatlab.org/nlab/files/M9KK6Intersection.jpg' width='650'/></p>
 
@@ -946,10 +948,20 @@ margin-left: 0em;
 <p>from <a href='#GKSTY02'>GKSTY 02</a></p>
 </blockquote>
 
+<p>Alternatively the <a class='existingWikiWord' href='/nlab/show/M9-brane'>O9-plane</a> may intersect the <a class='existingWikiWord' href='/nlab/show/black+brane'>black</a> <a class='existingWikiWord' href='/nlab/show/D6-brane'>D6-branes</a> away from the <a class='existingWikiWord' href='/nlab/show/black+brane'>black</a> <a class='existingWikiWord' href='/nlab/show/NS5-brane'>NS5-brane</a>:</p>
+
 <p><img src='https://ncatlab.org/nlab/files/D6D8Intersection.jpg' width='650'/></p>
 
 <blockquote>
 <p>from <a href='#HKLY15'>HKLY 15</a></p>
+</blockquote>
+
+<p>In general, some of the NS5 sit away from the <a class='existingWikiWord' href='/nlab/show/orientifold+plane'>O8-plane</a>, while some sit on top of it:</p>
+
+<p><img src='https://ncatlab.org/nlab/files/NS5D6O8.jpg' width='500'/></p>
+
+<blockquote>
+<p>from <a href='#HananyZaffaroni98'>Hanany-Zaffaroni 98</a></p>
 </blockquote>
 
 <h2 id='references'>References</h2>
@@ -1008,7 +1020,7 @@ margin-left: 0em;
 
 <ul>
 <li id='AFIRU00'>
-<p>G. Aldazabal, S. Franco, L. E. Ibanez, R. Rabadan, A. M. Uranga, <em><math class='maruku-mathml' display='inline' id='mathml_3809634840f46af68001865da38fa815a897dc1b_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>D</mi><mo>=</mo><mn>4</mn></mrow><annotation encoding='application/x-tex'>D=4</annotation></semantics></math> Chiral String Compactifications from Intersecting Branes</em>, J.Math.Phys.42:3103-3126, 2001 (<a href='https://arxiv.org/abs/hep-th/0011073'>arXiv:hep-th/0011073</a>)</p>
+<p>G. Aldazabal, S. Franco, L. E. Ibanez, R. Rabadan, A. M. Uranga, <em><math class='maruku-mathml' display='inline' id='mathml_1348de70a88ec62d7f7fba2928c0f0f34ca7ee44_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>D</mi><mo>=</mo><mn>4</mn></mrow><annotation encoding='application/x-tex'>D=4</annotation></semantics></math> Chiral String Compactifications from Intersecting Branes</em>, J.Math.Phys.42:3103-3126, 2001 (<a href='https://arxiv.org/abs/hep-th/0011073'>arXiv:hep-th/0011073</a>)</p>
 </li>
 
 <li>
@@ -1044,13 +1056,21 @@ margin-left: 0em;
 </li>
 
 <li>
-<p>Jill Ecker, <a class='existingWikiWord' href='/nlab/show/Gabriele+Honecker'>Gabriele Honecker</a>, Wieland Staessens, <em>D6-Brane Model Building on <math class='maruku-mathml' display='inline' id='mathml_3809634840f46af68001865da38fa815a897dc1b_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>ℤ</mi> <mn>2</mn></msub><mo>×</mo><msub><mi>ℤ</mi> <mn>6</mn></msub></mrow><annotation encoding='application/x-tex'>\mathbb{Z}_2 \times \mathbb{Z}_6</annotation></semantics></math>: MSSM-like and Left-Right Symmetric Models</em>, Nuclear Physics B Volume 901, December 2015, Pages 139-215, (<a href='https://arxiv.org/abs/1509.00048'>arXiv:1509.00048</a>)</p>
+<p>Jill Ecker, <a class='existingWikiWord' href='/nlab/show/Gabriele+Honecker'>Gabriele Honecker</a>, Wieland Staessens, <em>D6-Brane Model Building on <math class='maruku-mathml' display='inline' id='mathml_1348de70a88ec62d7f7fba2928c0f0f34ca7ee44_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>ℤ</mi> <mn>2</mn></msub><mo>×</mo><msub><mi>ℤ</mi> <mn>6</mn></msub></mrow><annotation encoding='application/x-tex'>\mathbb{Z}_2 \times \mathbb{Z}_6</annotation></semantics></math>: MSSM-like and Left-Right Symmetric Models</em>, Nuclear Physics B Volume 901, December 2015, Pages 139-215, (<a href='https://arxiv.org/abs/1509.00048'>arXiv:1509.00048</a>)</p>
 </li>
 </ul>
 
-<p>Intersection with <a class='existingWikiWord' href='/nlab/show/D8-brane'>D8-branes</a> is discussed in</p>
+<p>Intersection with <a class='existingWikiWord' href='/nlab/show/orientifold+plane'>O8-planes</a>/<a class='existingWikiWord' href='/nlab/show/D8-brane'>D8-branes</a> is discussed in</p>
 
 <ul>
+<li id='HananyZaffaroni98'>
+<p><a class='existingWikiWord' href='/nlab/show/Amihay+Hanany'>Amihay Hanany</a>, Alberto Zaffaroni, <em>Branes and Six Dimensional Supersymmetric Theories</em>, Nucl.Phys. B529 (1998) 180-206 (<a href='https://arxiv.org/abs/hep-th/9712145'>arXiv:hep-th/9712145</a>)</p>
+</li>
+
+<li id='HananyZaffaroni99'>
+<p><a class='existingWikiWord' href='/nlab/show/Amihay+Hanany'>Amihay Hanany</a>, Alberto Zaffaroni, <em>Monopoles in String Theory</em>, JHEP 9912 (1999) 014 (<a href='https://arxiv.org/abs/hep-th/9911113'>arXiv:hep-th/9911113</a>)</p>
+</li>
+
 <li id='GKSTY02'>
 <p>E. Gorbatov, V.S. Kaplunovsky, J. Sonnenschein, <a class='existingWikiWord' href='/nlab/show/Stefan+Theisen'>Stefan Theisen</a>, S. Yankielowicz, <em>On Heterotic Orbifolds, M Theory and Type I’ Brane Engineering</em>, JHEP 0205:015, 2002 (<a href='https://arxiv.org/abs/hep-th/0108135'>arXiv:hep-th/0108135</a>)</p>
 </li>
@@ -1068,7 +1088,7 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on April 13, 2018 02:59:54
+  Revised on April 13, 2018 03:57:40
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
   (91.230.41.205).
   See <a href="https://ncatlab.org/nlab/author/Urs Schreiber" style="color: #005c19">Author — Urs Schreiber</a> for an overview of the nLab pages to which Urs Schreiber has contributed.
