--- a/pages/11453.html
+++ b/pages/11453.html
@@ -580,7 +580,7 @@ margin-left: 0em;
 <div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#related_concepts'>Related concepts</a></li><li><a href='#references'>References</a></li></ul></div>
 <h2 id='idea'>Idea</h2>
 
-<p>In <a class='existingWikiWord' href='/nlab/show/string+theory'>string theory</a> on <a class='existingWikiWord' href='/nlab/show/orientifold'>orientifolds</a>, one says <em>O-plane</em> for the <a class='existingWikiWord' href='/nlab/show/fixed+point'>fixed point</a> locus of the <math class='maruku-mathml' display='inline' id='mathml_d0c66d4beb687f56bff77b5ee4945bd2a41ec042_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>ℤ</mi> <mn>2</mn></msub></mrow><annotation encoding='application/x-tex'>\mathbb{Z}_2</annotation></semantics></math>-<a class='existingWikiWord' href='/nlab/show/involution'>involution</a> (see at <em><a class='existingWikiWord' href='/nlab/show/real+space'>real space</a></em>).</p>
+<p>In <a class='existingWikiWord' href='/nlab/show/string+theory'>string theory</a> on <a class='existingWikiWord' href='/nlab/show/orientifold'>orientifolds</a>, one says <em>O-plane</em> for the <a class='existingWikiWord' href='/nlab/show/fixed+point'>fixed point</a> locus of the <math class='maruku-mathml' display='inline' id='mathml_2c0fe8b0a6c193ec7f4e0817f31beaad329c04cb_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>ℤ</mi> <mn>2</mn></msub></mrow><annotation encoding='application/x-tex'>\mathbb{Z}_2</annotation></semantics></math>-<a class='existingWikiWord' href='/nlab/show/involution'>involution</a> (see at <em><a class='existingWikiWord' href='/nlab/show/real+space'>real space</a></em>).</p>
 
 <p>O-planes carry <a class='existingWikiWord' href='/nlab/show/D-brane'>D-brane charges</a> in <a class='existingWikiWord' href='/nlab/show/KR+cohomology+theory'>KR-theory</a> (<a href='#Witten98'>Witten 98</a>), see (<a href='#DMR13'>DMR 13</a>) for a mathematical account.</p>
 
@@ -593,6 +593,10 @@ margin-left: 0em;
 
 <li>
 <p><a class='existingWikiWord' href='/nlab/show/M-theory+lift+of+gauge+enhancement+on+D6-branes'>M-theory lift of gauge enhancement on D6-branes</a></p>
+</li>
+
+<li>
+<p><a href='NS5-brane#NSHalfBranes'>NS5 half-branes</a></p>
 </li>
 </ul>
 
@@ -626,7 +630,8 @@ margin-left: 0em;
 <li>Wikipedia, <em><a href='https://en.wikipedia.org/wiki/Orientifold'>Orientifold</a></em></li>
 </ul>
 
-<p><span class='newWikiWord'>orientifold planes<a href='/nlab/new/orientifold+planes'>?</a></span></p>
+<p>
+</p>
 
 <p>
  
@@ -646,7 +651,7 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on April 13, 2018 02:56:07
+  Revised on April 13, 2018 03:49:50
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
   (91.230.41.205).
   See <a href="https://ncatlab.org/nlab/author/Urs Schreiber" style="color: #005c19">Author — Urs Schreiber</a> for an overview of the nLab pages to which Urs Schreiber has contributed.
@@ -654,7 +659,7 @@ margin-left: 0em;
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/orientifold+plane" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/orientifold+plane/3" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(3 revisions)</span> | <a href="/nlab/show/diff/orientifold+plane" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/orientifold+plane" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/orientifold+plane" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/orientifold+plane/4" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(4 revisions)</span> | <a href="/nlab/show/diff/orientifold+plane" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/orientifold+plane" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
 
   <span class="views">
     | Views:
