--- a/pages/11453.html
+++ b/pages/11453.html
@@ -577,12 +577,20 @@ margin-left: 0em;
 </div>
 
 <h1 id='contents'>Contents</h1>
-<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#related_concepts'>Related concepts</a></li><li><a href='#references'>References</a></li></ul></div>
+<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#properties'>Properties</a><ul><li><a href='#TDualityWithTypeIStringTheory'>T-Duality with type I string theory</a></li></ul></li><li><a href='#related_concepts'>Related concepts</a></li><li><a href='#references'>References</a></li></ul></div>
 <h2 id='idea'>Idea</h2>
 
-<p>In <a class='existingWikiWord' href='/nlab/show/string+theory'>string theory</a> on <a class='existingWikiWord' href='/nlab/show/orientifold'>orientifolds</a>, one says <em>O-plane</em> for the <a class='existingWikiWord' href='/nlab/show/fixed+point'>fixed point</a> locus of the <math class='maruku-mathml' display='inline' id='mathml_2c0fe8b0a6c193ec7f4e0817f31beaad329c04cb_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>ℤ</mi> <mn>2</mn></msub></mrow><annotation encoding='application/x-tex'>\mathbb{Z}_2</annotation></semantics></math>-<a class='existingWikiWord' href='/nlab/show/involution'>involution</a> (see at <em><a class='existingWikiWord' href='/nlab/show/real+space'>real space</a></em>).</p>
+<p>In <a class='existingWikiWord' href='/nlab/show/type+II+string+theory'>type II string theory</a> on <a class='existingWikiWord' href='/nlab/show/orientifold'>orientifolds</a>, one says <em>O-plane</em> for the <a class='existingWikiWord' href='/nlab/show/fixed+point'>fixed point</a> locus of the <math class='maruku-mathml' display='inline' id='mathml_351470d93854db8532f838b2e5f0eb9c509e3d83_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>ℤ</mi> <mn>2</mn></msub></mrow><annotation encoding='application/x-tex'>\mathbb{Z}_2</annotation></semantics></math>-<a class='existingWikiWord' href='/nlab/show/involution'>involution</a> (see at <em><a class='existingWikiWord' href='/nlab/show/real+space'>real space</a></em>).</p>
 
 <p>O-planes carry <a class='existingWikiWord' href='/nlab/show/D-brane'>D-brane charges</a> in <a class='existingWikiWord' href='/nlab/show/KR+cohomology+theory'>KR-theory</a> (<a href='#Witten98'>Witten 98</a>), see (<a href='#DMR13'>DMR 13</a>) for a mathematical account.</p>
+
+<h2 id='properties'>Properties</h2>
+
+<h3 id='TDualityWithTypeIStringTheory'>T-Duality with type I string theory</h3>
+
+<p>Under <a class='existingWikiWord' href='/nlab/show/T-duality'>T-duality</a> <a class='existingWikiWord' href='/nlab/show/type+I+string+theory'>type I string theory</a> is dual to <a class='existingWikiWord' href='/nlab/show/type+II+string+theory'>type II string theory</a> with orientifold planes (reviewed e.g. in <a href='#IbanezUranga12'>Ibanez-Uranga 12, section 5.3.2</a>):</p>
+
+<p><img src='https://ncatlab.org/nlab/files/TDualityOrientifold.jpg' width='500'/></p>
 
 <h2 id='related_concepts'>Related concepts</h2>
 
@@ -603,6 +611,10 @@ margin-left: 0em;
 <h2 id='references'>References</h2>
 
 <ul>
+<li id='IbanezUranga12'>
+<p><a class='existingWikiWord' href='/nlab/show/Luis+Ib%C3%A1%C3%B1ez'>Luis Ibáñez</a>, <a class='existingWikiWord' href='/nlab/show/%C3%81ngel+Uranga'>Angel Uranga</a>, section 5.3.2 of <em><a class='existingWikiWord' href='/nlab/show/String+Theory+and+Particle+Physics+--+An+Introduction+to+String+Phenomenology'>String Theory and Particle Physics -- An Introduction to String Phenomenology</a></em>, Cambridge 2012</p>
+</li>
+
 <li id='Witten98'>
 <p><a class='existingWikiWord' href='/nlab/show/Edward+Witten'>Edward Witten</a>, section 5 of <em>D-branes and K-theory</em>, J. High Energy Phys., 1998(12):019, 1998 (<a href='http://arxiv.org/abs/hep-th/9810188'>arXiv:hep-th/9810188</a>)</p>
 </li>
@@ -651,7 +663,7 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on April 13, 2018 03:49:50
+  Revised on April 13, 2018 04:30:14
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
   (91.230.41.205).
   See <a href="https://ncatlab.org/nlab/author/Urs Schreiber" style="color: #005c19">Author — Urs Schreiber</a> for an overview of the nLab pages to which Urs Schreiber has contributed.
@@ -659,7 +671,7 @@ margin-left: 0em;
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/orientifold+plane" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/orientifold+plane/4" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(4 revisions)</span> | <a href="/nlab/show/diff/orientifold+plane" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/orientifold+plane" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/orientifold+plane" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/orientifold+plane/5" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(5 revisions)</span> | <a href="/nlab/show/diff/orientifold+plane" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/orientifold+plane" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
 
   <span class="views">
     | Views:
