--- a/pages/1593.html
+++ b/pages/1593.html
@@ -290,12 +290,10 @@ margin-left: 0em;
 
 <div class="navigation">
     <span class="skipNav"><a href='#navEnd'>Skip the Navigation Links</a> | </span>
-    <a href="/nlab/show/HomePage" accesskey="H" title="Home, Sweet Home">Home Page</a> | 
-    <a href="/nlab/list" accesskey="A" title="Alphabetically sorted list of pages">All Pages</a> | 
-    <a href="/nlab/latest_revisions" accesskey="U" title="View latest revisions on this web">Latest Revisions</a> |
-    <a href="/nlab/authors" title="Who wrote what">Authors</a> | 
-    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> | 
-    <a href="/nlab/export" accesskey="X" title="Download a zip with all the pages in this wiki">Export</a> |
+    <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
+    <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
+    <a href="https://nforum.ncatlab.org/discussion/2648/#Item_3" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
              onblur="this.value == '' ? this.value = 'Search' : true" /></fieldset>
@@ -1100,9 +1098,9 @@ margin-left: 0em;
 <div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#properties'>Properties</a><ul><li><a href='#lift_to_mtherory_ftheory'>Lift to M-therory F-theory</a></li></ul></li><li><a href='#related_concepts'>Related concepts</a></li><li><a href='#References'>References</a></li></ul></div>
 <h2 id='idea'>Idea</h2>
 
-<p>An <em>orientifold</em> is a <a class='existingWikiWord' href='/nlab/show/target+space'>target</a> <a class='existingWikiWord' href='/nlab/show/spacetime'>spacetime</a> for <a class='existingWikiWord' href='/nlab/show/string+theory'>string</a> <a class='existingWikiWord' href='/nlab/show/sigma-model'>sigma-models</a> that combines aspects of <math class='maruku-mathml' display='inline' id='mathml_1d02986c08eb4742fa20f6780b7a606868f48e14_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>ℤ</mi> <mn>2</mn></msub></mrow><annotation encoding='application/x-tex'>\mathbb{Z}_2</annotation></semantics></math>-<a class='existingWikiWord' href='/nlab/show/orbifold'>orbifold</a>s with <em><a class='existingWikiWord' href='/nlab/show/orientation'>orientation</a> reversal</em> on the worldsheet, whence the name.</p>
+<p>An <em>orientifold</em> is a <a class='existingWikiWord' href='/nlab/show/target+space'>target</a> <a class='existingWikiWord' href='/nlab/show/spacetime'>spacetime</a> for <a class='existingWikiWord' href='/nlab/show/string+theory'>string</a> <a class='existingWikiWord' href='/nlab/show/sigma-model'>sigma-models</a> that combines aspects of <math class='maruku-mathml' display='inline' id='mathml_75b549e41f27d9c53144310d8dcaa669233fb5c4_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>ℤ</mi> <mn>2</mn></msub></mrow><annotation encoding='application/x-tex'>\mathbb{Z}_2</annotation></semantics></math>-<a class='existingWikiWord' href='/nlab/show/orbifold'>orbifold</a>s with <em><a class='existingWikiWord' href='/nlab/show/orientation'>orientation</a> reversal</em> on the worldsheet, whence the name.</p>
 
-<p>Where generally (<a class='existingWikiWord' href='/nlab/show/higher+gauge+field'>higher gauge</a>) <a class='existingWikiWord' href='/nlab/show/field+%28physics%29'>fields</a> in <a class='existingWikiWord' href='/nlab/show/physics'>physics</a>/<a class='existingWikiWord' href='/nlab/show/string+theory'>string theory</a> are <a class='existingWikiWord' href='/nlab/show/cocycle'>cocycles</a> in (<a class='existingWikiWord' href='/nlab/show/differential+cohomology'>differential</a>) <a class='existingWikiWord' href='/nlab/show/generalized+%28Eilenberg-Steenrod%29+cohomology'>cohomology theory</a> and typically in <a class='existingWikiWord' href='/nlab/show/complex+oriented+cohomology+theory'>complex oriented cohomology theory</a>, fields on orientifolds are cocycles in genuinely <math class='maruku-mathml' display='inline' id='mathml_1d02986c08eb4742fa20f6780b7a606868f48e14_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>ℤ</mi> <mn>2</mn></msub></mrow><annotation encoding='application/x-tex'>\mathbb{Z}_2</annotation></semantics></math>-<a class='existingWikiWord' href='/nlab/show/equivariant+cohomology'>equivariant cohomology</a> and typically in <a class='existingWikiWord' href='/nlab/show/real+oriented+cohomology+theory'>real-oriented cohomology theory</a>. For instance the <a class='existingWikiWord' href='/nlab/show/Kalb-Ramond+field'>B-field</a> which otherwise is a (twisted) coycles in (<a class='existingWikiWord' href='/nlab/show/ordinary+differential+cohomology'>ordinary</a>) <a class='existingWikiWord' href='/nlab/show/ordinary+cohomology'>ordinary cohomology</a> over an orientifold is a cocycle in (twisted) <a class='existingWikiWord' href='/nlab/show/HZR-theory'>HZR-theory</a>, and the <a class='existingWikiWord' href='/nlab/show/RR+field'>RR-fields</a> which usually are cocycles in (<a class='existingWikiWord' href='/nlab/show/twisted+cohomology'>twisted</a> <a class='existingWikiWord' href='/nlab/show/differential+K-theory'>differential</a>) <a class='existingWikiWord' href='/nlab/show/K-theory'>K-theory</a> over an orientifold are cocycles in <a class='existingWikiWord' href='/nlab/show/KR+cohomology+theory'>KR-theory</a> (<a href='#Witten98'>Witten 98</a>).</p>
+<p>Where generally (<a class='existingWikiWord' href='/nlab/show/higher+gauge+field'>higher gauge</a>) <a class='existingWikiWord' href='/nlab/show/field+%28physics%29'>fields</a> in <a class='existingWikiWord' href='/nlab/show/physics'>physics</a>/<a class='existingWikiWord' href='/nlab/show/string+theory'>string theory</a> are <a class='existingWikiWord' href='/nlab/show/cocycle'>cocycles</a> in (<a class='existingWikiWord' href='/nlab/show/differential+cohomology'>differential</a>) <a class='existingWikiWord' href='/nlab/show/generalized+%28Eilenberg-Steenrod%29+cohomology'>cohomology theory</a> and typically in <a class='existingWikiWord' href='/nlab/show/complex+oriented+cohomology+theory'>complex oriented cohomology theory</a>, fields on orientifolds are cocycles in genuinely <math class='maruku-mathml' display='inline' id='mathml_75b549e41f27d9c53144310d8dcaa669233fb5c4_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>ℤ</mi> <mn>2</mn></msub></mrow><annotation encoding='application/x-tex'>\mathbb{Z}_2</annotation></semantics></math>-<a class='existingWikiWord' href='/nlab/show/equivariant+cohomology'>equivariant cohomology</a> and typically in <a class='existingWikiWord' href='/nlab/show/real+oriented+cohomology+theory'>real-oriented cohomology theory</a>. For instance the <a class='existingWikiWord' href='/nlab/show/Kalb-Ramond+field'>B-field</a> which otherwise is a (twisted) coycles in (<a class='existingWikiWord' href='/nlab/show/ordinary+differential+cohomology'>ordinary</a>) <a class='existingWikiWord' href='/nlab/show/ordinary+cohomology'>ordinary cohomology</a> over an orientifold is a cocycle in (twisted) <a class='existingWikiWord' href='/nlab/show/HZR-theory'>HZR-theory</a>, and the <a class='existingWikiWord' href='/nlab/show/RR+field'>RR-fields</a> which usually are cocycles in (<a class='existingWikiWord' href='/nlab/show/twisted+cohomology'>twisted</a> <a class='existingWikiWord' href='/nlab/show/differential+K-theory'>differential</a>) <a class='existingWikiWord' href='/nlab/show/K-theory'>K-theory</a> over an orientifold are cocycles in <a class='existingWikiWord' href='/nlab/show/KR+cohomology+theory'>KR-theory</a> (<a href='#Witten98'>Witten 98</a>).</p>
 
 <p>An explicit model for <a class='existingWikiWord' href='/nlab/show/Kalb-Ramond+field'>B-fields</a> for the <a class='existingWikiWord' href='/nlab/show/bosonic+string'>bosonic string</a> on orientifolds (differential <a class='existingWikiWord' href='/nlab/show/HZR-theory'>HZR-theory</a>) given in (<a href='#Jandl'>Schreiber-Schweigert-Waldorf 05</a>) and examples are analyzed in this context in (<a href='#GawedzkiSuszekWaldorf08'>Gawedzki-Suszek-Waldorf 08</a>). See also (<a href='#KMSV16'>KMSV 16</a>).</p>
 
@@ -1143,6 +1141,8 @@ margin-left: 0em;
 </ul>
 
 <h2 id='References'>References</h2>
+
+<p>Textbook discussion in the context of <a class='existingWikiWord' href='/nlab/show/intersecting+D-brane+model'>intersecting D-brane models</a> with an eye towards <a class='existingWikiWord' href='/nlab/show/string+phenomenology'>string phenomenology</a> is in</p>
 
 <ul>
 <li id='IbanezUranga12'><a class='existingWikiWord' href='/nlab/show/Luis+Ib%C3%A1%C3%B1ez'>Luis Ibáñez</a>, <a class='existingWikiWord' href='/nlab/show/%C3%81ngel+Uranga'>Angel Uranga</a>, sections 5.3.4 and 10.1.3 of <em><a class='existingWikiWord' href='/nlab/show/String+Theory+and+Particle+Physics+--+An+Introduction+to+String+Phenomenology'>String Theory and Particle Physics -- An Introduction to String Phenomenology</a></em>, Cambridge University Press 2012</li>
@@ -1220,7 +1220,7 @@ margin-left: 0em;
 </li>
 </ul>
 
-<p>A formulation of some of the relevant aspects of (bosonic) orientifolds in terms of the <a class='existingWikiWord' href='/schreiber/show/differential+cohomology+in+a+cohesive+topos' title='schreiber'>differential nonabelian cohomology</a> with coefficients in the <a class='existingWikiWord' href='/nlab/show/2-group'>2-group</a> <math class='maruku-mathml' display='inline' id='mathml_1d02986c08eb4742fa20f6780b7a606868f48e14_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>AUT</mi><mo stretchy='false'>(</mo><mi>U</mi><mo stretchy='false'>(</mo><mn>1</mn><mo stretchy='false'>)</mo><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>AUT(U(1))</annotation></semantics></math> coming from the <a class='existingWikiWord' href='/nlab/show/crossed+module'>crossed module</a> <math class='maruku-mathml' display='inline' id='mathml_1d02986c08eb4742fa20f6780b7a606868f48e14_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>[</mo><mi>U</mi><mo stretchy='false'>(</mo><mn>1</mn><mo stretchy='false'>)</mo><mo>→</mo><msub><mi>ℤ</mi> <mn>2</mn></msub><mo stretchy='false'>]</mo></mrow><annotation encoding='application/x-tex'>[U(1) \to \mathbb{Z}_2]</annotation></semantics></math> is indicated in</p>
+<p>A formulation of some of the relevant aspects of (bosonic) orientifolds in terms of the <a class='existingWikiWord' href='/schreiber/show/differential+cohomology+in+a+cohesive+topos' title='schreiber'>differential nonabelian cohomology</a> with coefficients in the <a class='existingWikiWord' href='/nlab/show/2-group'>2-group</a> <math class='maruku-mathml' display='inline' id='mathml_75b549e41f27d9c53144310d8dcaa669233fb5c4_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>AUT</mi><mo stretchy='false'>(</mo><mi>U</mi><mo stretchy='false'>(</mo><mn>1</mn><mo stretchy='false'>)</mo><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>AUT(U(1))</annotation></semantics></math> coming from the <a class='existingWikiWord' href='/nlab/show/crossed+module'>crossed module</a> <math class='maruku-mathml' display='inline' id='mathml_75b549e41f27d9c53144310d8dcaa669233fb5c4_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>[</mo><mi>U</mi><mo stretchy='false'>(</mo><mn>1</mn><mo stretchy='false'>)</mo><mo>→</mo><msub><mi>ℤ</mi> <mn>2</mn></msub><mo stretchy='false'>]</mo></mrow><annotation encoding='application/x-tex'>[U(1) \to \mathbb{Z}_2]</annotation></semantics></math> is indicated in</p>
 
 <ul>
 <li><a class='existingWikiWord' href='/nlab/show/Urs+Schreiber'>Urs Schreiber</a>, talk <a class='existingWikiWord' href='/schreiber/show/Background+fields+in+twisted+differential+nonabelian+cohomology' title='schreiber'>Background fields in twisted differential nonabelian cohomology</a> at <a class='existingWikiWord' href='/nlab/show/Oberwolfach+Workshop%2C+June+2009+--+Strings%2C+Fields%2C+Topology'>Oberwolfach Workshop, June 2009 -- Strings, Fields, Topology</a></li>
@@ -1261,19 +1261,20 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on March 31, 2018 21:34:32 
+  Revised on April 13, 2018 04:19:09
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (94.220.90.187)
+  (91.230.41.205).
+  See <a href="https://ncatlab.org/nlab/author/Urs Schreiber" style="color: #005c19">Author — Urs Schreiber</a> for an overview of the nLab pages to which Urs Schreiber has contributed.
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/orientifold" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/orientifold/36" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(36 revisions)</span> | <a href="/nlab/show/diff/orientifold" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/orientifold" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
-  
+  <a href="/nlab/edit/orientifold" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/orientifold/37" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(37 revisions)</span> | <a href="/nlab/show/diff/orientifold" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/orientifold" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+
   <span class="views">
-    | Views: 
+    | Views:
     <a href="/nlab/print/orientifold" accesskey="p" id="view_print" rel="nofollow">Print</a>
-    | 
+    |
     <a href="/nlab/tex/orientifold" id="view_tex" rel="nofollow">TeX</a>
     |
     <a href="/nlab/source/orientifold" id="view_source" rel="nofollow">Source</a>
