--- a/pages/19110.html
+++ b/pages/19110.html
@@ -582,7 +582,7 @@ margin-left: 0em;
 
 <p>In the presence of <a class='existingWikiWord' href='/nlab/show/D-brane'>D-branes</a>, plain <a class='existingWikiWord' href='/nlab/show/type+II+string+theory'>type II string theory</a> in fact has a <a class='existingWikiWord' href='/nlab/show/quantum+anomaly'>quantum anomaly</a> reflected by <a class='existingWikiWord' href='/nlab/show/tadpole'>tadpole</a> <a class='existingWikiWord' href='/nlab/show/Feynman+diagram'>Feynman diagrams</a> in the <a class='existingWikiWord' href='/nlab/show/string+scattering+amplitude'>string perturbation series</a> for <a class='existingWikiWord' href='/nlab/show/RR+field'>RR-fields</a>. This anomaly cancels if the <a class='existingWikiWord' href='/nlab/show/D-brane'>D-branes</a> are accompanied by a suitable collection of <a class='existingWikiWord' href='/nlab/show/orientifold+plane'>O-planes</a>, hence if one considers <a class='existingWikiWord' href='/nlab/show/orientifold'>orientifold</a> backgrounds (<a href='#Sagnotti88'>Sagnotti 88, pp. 5</a>, <a href='#SimonPolchinski96'>Simon-Polchinski 96, section 3</a>). (For space-filling <a class='existingWikiWord' href='/nlab/show/orientifold+plane'>O-planes</a> this means to consider <a class='existingWikiWord' href='/nlab/show/type+I+string+theory'>type I string theory</a> instead.)</p>
 
-<p>Accordingly, tadpole cancellation via <a class='existingWikiWord' href='/nlab/show/orientifold'>orientifolding</a> is a key consisteny condition in the construction of <a class='existingWikiWord' href='/nlab/show/intersecting+D-brane+model'>intersecting D-brane models</a> for <a class='existingWikiWord' href='/nlab/show/string+phenomenology'>string phenomenology</a>.</p>
+<p>Accordingly, tadpole cancellation via <a class='existingWikiWord' href='/nlab/show/orientifold'>orientifolding</a> is a key consistency condition in the construction of <a class='existingWikiWord' href='/nlab/show/intersecting+D-brane+model'>intersecting D-brane models</a> for <a class='existingWikiWord' href='/nlab/show/string+phenomenology'>string phenomenology</a>.</p>
 
 <h2 id='references'>References</h2>
 
@@ -632,18 +632,21 @@ margin-left: 0em;
 <p>
  
 </p>
+
+<p>
+</p>
 </div>
 
 <div class="revisedby">
-  Created on April 13, 2018 06:01:37
-  by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (91.230.41.205).
-  See <a href="https://ncatlab.org/nlab/author/Urs Schreiber" style="color: #005c19">Author — Urs Schreiber</a> for an overview of the nLab pages to which Urs Schreiber has contributed.
+  Revised on April 13, 2018 08:43:25
+  by <a class="existingWikiWord" href="/nlab/show/David+Corfield">David Corfield</a>
+  (147.147.173.215).
+  See <a href="https://ncatlab.org/nlab/author/David Corfield" style="color: #005c19">Author — David Corfield</a> for an overview of the nLab pages to which David Corfield has contributed.
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/RR-field+tadpole+cancellation" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  <a href="/nlab/edit/RR-field+tadpole+cancellation" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/RR-field+tadpole+cancellation/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/RR-field+tadpole+cancellation" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/RR-field+tadpole+cancellation" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
 
   <span class="views">
     | Views:
