--- a/pages/15269.html
+++ b/pages/15269.html
@@ -290,12 +290,10 @@ margin-left: 0em;
 
 <div class="navigation">
     <span class="skipNav"><a href='#navEnd'>Skip the Navigation Links</a> | </span>
-    <a href="/nlab/show/HomePage" accesskey="H" title="Home, Sweet Home">Home Page</a> | 
-    <a href="/nlab/list" accesskey="A" title="Alphabetically sorted list of pages">All Pages</a> | 
-    <a href="/nlab/latest_revisions" accesskey="U" title="View latest revisions on this web">Latest Revisions</a> |
-    <a href="/nlab/authors" title="Who wrote what">Authors</a> | 
-    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> | 
-    <a href="/nlab/export" accesskey="X" title="Download a zip with all the pages in this wiki">Export</a> |
+    <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
+    <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
+    <a href="https://nforum.ncatlab.org/discussions/?CategoryID=0" title="Discuss this page on the nForum. It does not yet have a dedicated thread; feel free to create one, giving it the same name as the title of this page" style="color:black">Discuss this page</a> |
+    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
              onblur="this.value == '' ? this.value = 'Search' : true" /></fieldset>
@@ -423,7 +421,7 @@ margin-left: 0em;
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/Beilinson-Bernstein+localization'>Beĭlinson-Bernstein localization</a></p>
+<p><span class='newWikiWord'>Be?linson-Bernstein localization<a href='/nlab/new/Be%3Flinson-Bernstein+localization'>?</a></span></p>
 </li>
 
 <li>
@@ -446,11 +444,11 @@ margin-left: 0em;
 <div class='maruku_toc'><ul><li><a href='#classical_mckay_correspondence'>Classical McKay correspondence</a><ul><li><a href='#construction'>Construction</a></li></ul></li><li><a href='#derived_mckay_correspondence'>Derived McKay correspondence</a></li><li><a href='#related_concepts'>Related concepts</a></li><li><a href='#references'>References</a></li></ul></div>
 <h2 id='classical_mckay_correspondence'>Classical McKay correspondence</h2>
 
-<p>The classical McKay correspondence, named after John McKay, is a one-to-one correspondence between the <span class='newWikiWord'>McKay graphs<a href='/nlab/new/McKay+graphs'>?</a></span> of finite subgroups <math class='maruku-mathml' display='inline' id='mathml_60e0cca3e63f80a869813c2da97f3e66365b712c_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>G</mi><mo>⊂</mo><msub><mtext>SL</mtext> <mn>2</mn></msub><mo stretchy='false'>(</mo><mi>ℂ</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>G \subset \text{SL}_2(\mathbb{C})</annotation></semantics></math> and the extended Dynkin diagrams of ADE type.</p>
+<p>The classical McKay correspondence, named after John McKay, is a one-to-one correspondence between the <span class='newWikiWord'>McKay graphs<a href='/nlab/new/McKay+graphs'>?</a></span> of finite subgroups <math class='maruku-mathml' display='inline' id='mathml_509d273a89e31ca6bf4d9bd946a1e2e2650dcaab_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>G</mi><mo>⊂</mo><msub><mtext>SL</mtext> <mn>2</mn></msub><mo stretchy='false'>(</mo><mi>ℂ</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>G \subset \text{SL}_2(\mathbb{C})</annotation></semantics></math> and the extended Dynkin diagrams of ADE type.</p>
 
 <h3 id='construction'>Construction</h3>
 
-<p>Take <math class='maruku-mathml' display='inline' id='mathml_60e0cca3e63f80a869813c2da97f3e66365b712c_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>G</mi><mo>⊂</mo><msub><mtext>SL</mtext> <mn>2</mn></msub><mo stretchy='false'>(</mo><mi>ℂ</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>G\subset \text{SL}_2(\mathbb{C})</annotation></semantics></math> finite. Then, let <math class='maruku-mathml' display='inline' id='mathml_60e0cca3e63f80a869813c2da97f3e66365b712c_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>ρ</mi> <mn>0</mn></msub><mo>,</mo><mo>.</mo><mo>.</mo><mo>.</mo><mo>,</mo><msub><mi>ρ</mi> <mi>n</mi></msub></mrow><annotation encoding='application/x-tex'>\rho_0, ..., \rho_n</annotation></semantics></math> denote the irreducible representations of <math class='maruku-mathml' display='inline' id='mathml_60e0cca3e63f80a869813c2da97f3e66365b712c_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>G</mi></mrow><annotation encoding='application/x-tex'>G</annotation></semantics></math>, with <math class='maruku-mathml' display='inline' id='mathml_60e0cca3e63f80a869813c2da97f3e66365b712c_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>ρ</mi> <mn>0</mn></msub></mrow><annotation encoding='application/x-tex'>\rho_0</annotation></semantics></math> being the trivial representation. Then, set <math class='maruku-mathml' display='inline' id='mathml_60e0cca3e63f80a869813c2da97f3e66365b712c_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>⟨</mo><msub><mi>ρ</mi> <mi>i</mi></msub><mo>⊗</mo><msup><mi>ℂ</mi> <mn>2</mn></msup><mo>,</mo><msub><mi>ρ</mi> <mi>j</mi></msub><mo stretchy='false'>⟩</mo><mo>=</mo><msub><mi>m</mi> <mi>ij</mi></msub></mrow><annotation encoding='application/x-tex'>\langle \rho_i \otimes \mathbb{C}^2, \rho_j \rangle = m_{ij}</annotation></semantics></math>. Since <math class='maruku-mathml' display='inline' id='mathml_60e0cca3e63f80a869813c2da97f3e66365b712c_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>ℂ</mi> <mn>2</mn></msup></mrow><annotation encoding='application/x-tex'>\mathbb{C}^2</annotation></semantics></math> is self-dual, as it admits an invariant non-degenerate skew-symmetric bilinear form, <math class='maruku-mathml' display='inline' id='mathml_60e0cca3e63f80a869813c2da97f3e66365b712c_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>m</mi> <mi>ij</mi></msub><mo>=</mo><msub><mi>m</mi> <mi>ji</mi></msub></mrow><annotation encoding='application/x-tex'>m_{ij} = m_{ji}</annotation></semantics></math>. Finally, consider the vertices <math class='maruku-mathml' display='inline' id='mathml_60e0cca3e63f80a869813c2da97f3e66365b712c_9' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>v</mi> <mn>0</mn></msub><mo>,</mo><mo>.</mo><mo>.</mo><mo>.</mo><mo>,</mo><msub><mi>v</mi> <mi>n</mi></msub></mrow><annotation encoding='application/x-tex'>v_0, ..., v_n</annotation></semantics></math> with <math class='maruku-mathml' display='inline' id='mathml_60e0cca3e63f80a869813c2da97f3e66365b712c_10' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>m</mi> <mi>ij</mi></msub></mrow><annotation encoding='application/x-tex'>m_{ij}</annotation></semantics></math> vertices between each <math class='maruku-mathml' display='inline' id='mathml_60e0cca3e63f80a869813c2da97f3e66365b712c_11' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>v</mi> <mi>i</mi></msub></mrow><annotation encoding='application/x-tex'>v_i</annotation></semantics></math> and <math class='maruku-mathml' display='inline' id='mathml_60e0cca3e63f80a869813c2da97f3e66365b712c_12' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>v</mi> <mi>j</mi></msub></mrow><annotation encoding='application/x-tex'>v_j</annotation></semantics></math>. Furthermore, for <math class='maruku-mathml' display='inline' id='mathml_60e0cca3e63f80a869813c2da97f3e66365b712c_13' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>m</mi> <mi>ij</mi></msub><mo>=</mo><mn>1</mn></mrow><annotation encoding='application/x-tex'>m_{ij} = 1</annotation></semantics></math>, we do not need to write the weight of the corresponding arrow. The resulting graph is the <span class='newWikiWord'>McKay graph<a href='/nlab/new/McKay+graph'>?</a></span> of <math class='maruku-mathml' display='inline' id='mathml_60e0cca3e63f80a869813c2da97f3e66365b712c_14' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>G</mi></mrow><annotation encoding='application/x-tex'>G</annotation></semantics></math>.</p>
+<p>Take <math class='maruku-mathml' display='inline' id='mathml_509d273a89e31ca6bf4d9bd946a1e2e2650dcaab_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>G</mi><mo>⊂</mo><msub><mtext>SL</mtext> <mn>2</mn></msub><mo stretchy='false'>(</mo><mi>ℂ</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>G\subset \text{SL}_2(\mathbb{C})</annotation></semantics></math> finite. Then, let <math class='maruku-mathml' display='inline' id='mathml_509d273a89e31ca6bf4d9bd946a1e2e2650dcaab_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>ρ</mi> <mn>0</mn></msub><mo>,</mo><mo>.</mo><mo>.</mo><mo>.</mo><mo>,</mo><msub><mi>ρ</mi> <mi>n</mi></msub></mrow><annotation encoding='application/x-tex'>\rho_0, ..., \rho_n</annotation></semantics></math> denote the irreducible representations of <math class='maruku-mathml' display='inline' id='mathml_509d273a89e31ca6bf4d9bd946a1e2e2650dcaab_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>G</mi></mrow><annotation encoding='application/x-tex'>G</annotation></semantics></math>, with <math class='maruku-mathml' display='inline' id='mathml_509d273a89e31ca6bf4d9bd946a1e2e2650dcaab_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>ρ</mi> <mn>0</mn></msub></mrow><annotation encoding='application/x-tex'>\rho_0</annotation></semantics></math> being the trivial representation. Then, set <math class='maruku-mathml' display='inline' id='mathml_509d273a89e31ca6bf4d9bd946a1e2e2650dcaab_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>⟨</mo><msub><mi>ρ</mi> <mi>i</mi></msub><mo>⊗</mo><msup><mi>ℂ</mi> <mn>2</mn></msup><mo>,</mo><msub><mi>ρ</mi> <mi>j</mi></msub><mo stretchy='false'>⟩</mo><mo>=</mo><msub><mi>m</mi> <mi>ij</mi></msub></mrow><annotation encoding='application/x-tex'>\langle \rho_i \otimes \mathbb{C}^2, \rho_j \rangle = m_{ij}</annotation></semantics></math>. Since <math class='maruku-mathml' display='inline' id='mathml_509d273a89e31ca6bf4d9bd946a1e2e2650dcaab_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>ℂ</mi> <mn>2</mn></msup></mrow><annotation encoding='application/x-tex'>\mathbb{C}^2</annotation></semantics></math> is self-dual, as it admits an invariant non-degenerate skew-symmetric bilinear form, <math class='maruku-mathml' display='inline' id='mathml_509d273a89e31ca6bf4d9bd946a1e2e2650dcaab_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>m</mi> <mi>ij</mi></msub><mo>=</mo><msub><mi>m</mi> <mi>ji</mi></msub></mrow><annotation encoding='application/x-tex'>m_{ij} = m_{ji}</annotation></semantics></math>. Finally, consider the vertices <math class='maruku-mathml' display='inline' id='mathml_509d273a89e31ca6bf4d9bd946a1e2e2650dcaab_9' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>v</mi> <mn>0</mn></msub><mo>,</mo><mo>.</mo><mo>.</mo><mo>.</mo><mo>,</mo><msub><mi>v</mi> <mi>n</mi></msub></mrow><annotation encoding='application/x-tex'>v_0, ..., v_n</annotation></semantics></math> with <math class='maruku-mathml' display='inline' id='mathml_509d273a89e31ca6bf4d9bd946a1e2e2650dcaab_10' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>m</mi> <mi>ij</mi></msub></mrow><annotation encoding='application/x-tex'>m_{ij}</annotation></semantics></math> vertices between each <math class='maruku-mathml' display='inline' id='mathml_509d273a89e31ca6bf4d9bd946a1e2e2650dcaab_11' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>v</mi> <mi>i</mi></msub></mrow><annotation encoding='application/x-tex'>v_i</annotation></semantics></math> and <math class='maruku-mathml' display='inline' id='mathml_509d273a89e31ca6bf4d9bd946a1e2e2650dcaab_12' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>v</mi> <mi>j</mi></msub></mrow><annotation encoding='application/x-tex'>v_j</annotation></semantics></math>. Furthermore, for <math class='maruku-mathml' display='inline' id='mathml_509d273a89e31ca6bf4d9bd946a1e2e2650dcaab_13' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>m</mi> <mi>ij</mi></msub><mo>=</mo><mn>1</mn></mrow><annotation encoding='application/x-tex'>m_{ij} = 1</annotation></semantics></math>, we do not need to write the weight of the corresponding arrow. The resulting graph is the <span class='newWikiWord'>McKay graph<a href='/nlab/new/McKay+graph'>?</a></span> of <math class='maruku-mathml' display='inline' id='mathml_509d273a89e31ca6bf4d9bd946a1e2e2650dcaab_14' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>G</mi></mrow><annotation encoding='application/x-tex'>G</annotation></semantics></math>.</p>
 
 <p>(…)</p>
 
@@ -480,6 +478,12 @@ margin-left: 0em;
 </li>
 </ul>
 
+<p>Literature collection</p>
+
+<ul>
+<li><a class='existingWikiWord' href='/nlab/show/Miles+Reid'>Miles Reid</a>, <em><a href='homepages.warwick.ac.uk/staff/Miles.Reid/McKay/'>Links to papers on McKay correspondence</a></em></li>
+</ul>
+
 <p>For the 2001 publication on the derived McKay correspondence, see:</p>
 
 <ul>
@@ -488,19 +492,20 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on November 30, 2015 16:57:49 
-  by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (78.104.9.22)
+  <p>
+  Last revised on April 16, 2018 at 03:46:52.
+  See the <a href="https://ncatlab.org/nlab/history/McKay correspondence" style="color: #005c19">history</a> of this page for a list of all contributions to it.
+  </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/McKay+correspondence" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/McKay+correspondence/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/McKay+correspondence" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/McKay+correspondence" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
-  
+  <a href="/nlab/edit/McKay+correspondence" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/McKay+correspondence/3" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(3 revisions)</span> | <a href="/nlab/show/diff/McKay+correspondence" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/McKay+correspondence" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+
   <span class="views">
-    | Views: 
+    | Views:
     <a href="/nlab/print/McKay+correspondence" accesskey="p" id="view_print" rel="nofollow">Print</a>
-    | 
+    |
     <a href="/nlab/tex/McKay+correspondence" id="view_tex" rel="nofollow">TeX</a>
     |
     <a href="/nlab/source/McKay+correspondence" id="view_source" rel="nofollow">Source</a>
