--- a/pages/7260.html
+++ b/pages/7260.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -290,12 +290,10 @@ margin-left: 0em;
 
 <div class="navigation">
     <span class="skipNav"><a href='#navEnd'>Skip the Navigation Links</a> | </span>
-    <a href="/nlab/show/HomePage" accesskey="H" title="Home, Sweet Home">Home Page</a> | 
-    <a href="/nlab/list" accesskey="A" title="Alphabetically sorted list of pages">All Pages</a> | 
-    <a href="/nlab/latest_revisions" accesskey="U" title="View latest revisions on this web">Latest Revisions</a> |
-    <a href="/nlab/authors" title="Who wrote what">Authors</a> | 
-    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> | 
-    <a href="/nlab/export" accesskey="X" title="Download a zip with all the pages in this wiki">Export</a> |
+    <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
+    <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
+    <a href="https://nforum.ncatlab.org/discussion/3535/#Item_3" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
              onblur="this.value == '' ? this.value = 'Search' : true" /></fieldset>
@@ -477,7 +475,7 @@ margin-left: 0em;
 
 <ul>
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/finite+quantum+mechanics+in+terms+of+dagger-compact+categories'>in terms of †-compact categories</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/finite+quantum+mechanics+in+terms+of+dagger-compact+categories'>in terms of ∞-compact categories</a></p>
 </li>
 
 <li>
@@ -908,7 +906,7 @@ margin-left: 0em;
 <div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#related_entries'>Related entries</a></li><li><a href='#References'>References</a></li></ul></div>
 <h2 id='idea'>Idea</h2>
 
-<p>On the very largest scales observable in astrophysical <a class='existingWikiWord' href='/nlab/show/experimental+observation'>experiment</a>, the cosmos is well described by an <a class='existingWikiWord' href='/nlab/show/FRW+model'>FRW model</a> with <a class='existingWikiWord' href='/nlab/show/cosmological+constant'>cosmological constant</a> <math class='maruku-mathml' display='inline' id='mathml_139c8feb13dccd2df21d63ccff0025a11fb18f11_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>Λ</mi></mrow><annotation encoding='application/x-tex'>\Lambda</annotation></semantics></math>, with plenty of <a class='existingWikiWord' href='/nlab/show/dark+matter'>dark matter</a> and with primordial <a class='existingWikiWord' href='/nlab/show/cosmic+inflation'>cosmic inflation</a> (called the <math class='maruku-mathml' display='inline' id='mathml_139c8feb13dccd2df21d63ccff0025a11fb18f11_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>Λ</mi></mrow><annotation encoding='application/x-tex'>\Lambda</annotation></semantics></math>-CDM “<a class='existingWikiWord' href='/nlab/show/standard+model+of+cosmology'>concordance model of cosmology</a>”). A <a class='existingWikiWord' href='/nlab/show/event+horizon'>horizon</a> in there and everything on smaller scales is the <em>observable universe</em>.</p>
+<p>On the very largest scales observable in astrophysical <a class='existingWikiWord' href='/nlab/show/experimental+observation'>experiment</a>, the cosmos is well described by an <a class='existingWikiWord' href='/nlab/show/FRW+model'>FRW model</a> with <a class='existingWikiWord' href='/nlab/show/cosmological+constant'>cosmological constant</a> <math class='maruku-mathml' display='inline' id='mathml_87265e5fcb2b61d298a11b5da22c1341756312d2_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>Λ</mi></mrow><annotation encoding='application/x-tex'>\Lambda</annotation></semantics></math>, with plenty of <a class='existingWikiWord' href='/nlab/show/dark+matter'>dark matter</a> and with primordial <a class='existingWikiWord' href='/nlab/show/cosmic+inflation'>cosmic inflation</a> (called the <math class='maruku-mathml' display='inline' id='mathml_87265e5fcb2b61d298a11b5da22c1341756312d2_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>Λ</mi></mrow><annotation encoding='application/x-tex'>\Lambda</annotation></semantics></math>-CDM “<a class='existingWikiWord' href='/nlab/show/standard+model+of+cosmology'>concordance model of cosmology</a>”). A <a class='existingWikiWord' href='/nlab/show/event+horizon'>horizon</a> in there and everything on smaller scales is the <em>observable universe</em>.</p>
 
 <p>There has never been a reason to assume that beyond this <em>cosmic horizon</em> visible to us today, the cosmos would not extend further. In fact in the simple <a class='existingWikiWord' href='/nlab/show/FRW+model'>FRW models</a> with positive cosmological constant, the <a class='existingWikiWord' href='/nlab/show/spacetime'>spacetime</a> <a class='existingWikiWord' href='/nlab/show/manifold'>manifold</a> is not a <a class='existingWikiWord' href='/nlab/show/closed+manifold'>closed manifold</a> and extends indefinitely beyond our observable horizon. This is directly analogous to the ancient mariner who would stand on the deck of his ship and see a few miles of ocean around him. That was the world within his horizon, but there was no telling what lay beyond.</p>
 
@@ -966,6 +964,10 @@ margin-left: 0em;
 </li>
 </ul>
 </li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/structure+formation'>structure formation</a></p>
+</li>
 </ul>
 </li>
 
@@ -1002,7 +1004,7 @@ margin-left: 0em;
 <li id='VisObservableUniverse'>American Museum of Natural History, <em>The known universe</em> (<a href='https://www.youtube.com/watch?v=17jymDn0W6U#t=374'>video</a>)</li>
 </ul>
 
-<p>A simulation of these is at</p>
+<p>A simulation of the <a class='existingWikiWord' href='/nlab/show/structure+formation'>structure formation</a> (see there for more) of these is at</p>
 
 <ul>
 <li><em><a href='http://www.mpa-garching.mpg.de/galform/virgo/millennium/'>The Millennium Simulation Project</a></em></li>
@@ -1044,19 +1046,20 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on August 28, 2016 04:28:59 
-  by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (89.15.237.34)
+  <p>
+  Last revised on April 16, 2018 at 08:16:26.
+  See the <a href="https://ncatlab.org/nlab/history/observable universe" style="color: #005c19">history</a> of this page for a list of all contributions to it.
+  </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/observable+universe" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/observable+universe/20" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(20 revisions)</span> | <a href="/nlab/show/diff/observable+universe" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/observable+universe" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
-  
+  <a href="/nlab/edit/observable+universe" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/observable+universe/21" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(21 revisions)</span> | <a href="/nlab/show/diff/observable+universe" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/observable+universe" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+
   <span class="views">
-    | Views: 
+    | Views:
     <a href="/nlab/print/observable+universe" accesskey="p" id="view_print" rel="nofollow">Print</a>
-    | 
+    |
     <a href="/nlab/tex/observable+universe" id="view_tex" rel="nofollow">TeX</a>
     |
     <a href="/nlab/source/observable+universe" id="view_source" rel="nofollow">Source</a>
